Fix layout bugs

--- a/src/main/resources/web-root/resources/css/desktopAndLaptops.css
+++ b/src/main/resources/web-root/resources/css/desktopAndLaptops.css
@@ -33,9 +33,12 @@
 
 
     #lockInResult{
-        margin-top: 50px;
-        margin-right:auto;
+        position:relative;
+        font-family: 'Cabin';
+        margin-top: 30px;
+        margin-right: auto;
         margin-left: auto;
+        bottom: 5%;
     }
 
     #enter-grade{
@@ -102,7 +105,7 @@
     ul#not-ready-area li{
         color: #e60000;
         font-family: 'Arial Rounded MT Bold', sans-serif;
-        font-size: 35px;
+        font-size: 25px;
         font-weight: 400;
         line-height: 30px;
         margin: 0 0 8px;
@@ -111,7 +114,7 @@
     ul#ready-area li{
         color: #00ff00;
         font-family: 'Arial Rounded MT Bold', sans-serif;
-        font-size: 35px;
+        font-size: 25px;
         font-weight: 400;
         line-height: 30px;
         margin: 0 0 8px;
@@ -144,7 +147,7 @@
     ul#not-done-area li{
         color: #e60000;
         font-family: 'Arial Rounded MT Bold', sans-serif;
-        font-size: 35px;
+        font-size: 25px;
         font-weight: 400;
         line-height: 30px;
         margin: 0 0 8px;
@@ -153,7 +156,7 @@
     ul#done-area li{
         color: #00ff00;
         font-family: 'Arial Rounded MT Bold', sans-serif;
-        font-size: 35px;
+        font-size: 25px;
         font-weight: 400;
         line-height: 30px;
         margin: 0 0 8px;
@@ -285,7 +288,7 @@
     }
 
     #gamePoint-area{
-        width: 120px;
+        width: 250px;
         height:auto;
         margin-left: auto;
         margin-right: auto;
@@ -297,7 +300,7 @@
         margin: auto;
         height:auto;
         background:rgba(0,0,0,0.65);
-        width: 120px;
+        width: 250px;
         border: solid lightgrey;
         border-width: 2px;
         padding: 4px;
@@ -685,26 +688,18 @@
 
 
     #lobbyClose{
-        position:absolute;
-        margin-top: 100px;
-        margin-bottom: 50px;
+        position:relative;
         font-family: 'Cabin';
-        left:80px;
-        float:bottom;
+        margin-top: 40px;
+        bottom: 5%;
         color: #fff;
-        width:auto;
-        height: auto;
     }
     #lobbyLeave{
-        position:absolute;
-        margin-top: 100px;
-        margin-bottom: 50px;
+        position:relative;
         font-family: 'Cabin';
-        left:80px;
-        float:bottom;
+        margin-top: 40px;
+        bottom: 5%;
         color: #fff;
-        width:auto;
-        height: auto;
     }
 
 
