--- a/src/main/resources/web-root/resources/css/iPads.css
+++ b/src/main/resources/web-root/resources/css/iPads.css
@@ -30,27 +30,27 @@
 
     #not-ready-page {
         float: left;
-        margin-left: 100px;
     }
 
     #ready-page {
         float: right;
-        margin-right: 100px;
     }
 
 
     div#not-ready-page h2{
+        text-align: left;
         text-decoration: underline;
     }
 
     div#ready-page h2{
+        text-align: left;
         text-decoration: underline;
     }
 
     ul#not-ready-area li{
         color: #e60000;
         font-family: 'Arial Rounded MT Bold', sans-serif;
-        font-size: 70px;
+        font-size: 50px;
         font-weight: 400;
         line-height: 60px;
         margin: 0 0 16px;
@@ -61,7 +61,7 @@
         color: #00ff00;
         text-align: left;
         font-family: 'Arial Rounded MT Bold', sans-serif;
-        font-size: 70px;
+        font-size: 50px;
         font-weight: 400;
         line-height: 60px;
         margin: 0 0 16px;
@@ -71,7 +71,6 @@
         margin-top: 75px;
         margin-bottom: 50px;
         float: left;
-        margin-left: 8%;
         text-align: left;
     }
 
@@ -79,7 +78,6 @@
         margin-top: 75px;
         margin-bottom: 50px;
         float: right;
-        margin-right: 8%;
         text-align: left;
     }
 
@@ -90,10 +88,12 @@
 
 
     div#not-done-page h2{
+        text-align: left;
         text-decoration: underline;
     }
 
     div#done-page h2{
+        text-align: left;
         text-decoration: underline;
     }
 
@@ -118,9 +118,12 @@
     }
 
     #lockInResult{
-        margin-top: 20px;
-        margin-right:auto;
+        position:relative;
+        font-family: 'Cabin';
+        margin-top: 30px;
+        margin-right: auto;
         margin-left: auto;
+        bottom: 5%;
     }
 
     header {
@@ -243,7 +246,7 @@
     }
 
     #gamePoint-area{
-        width: 340px;
+        width: 400px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -253,7 +256,7 @@
         display: inline-block;
         margin: auto;
         background:rgba(0,0,0,0.65);
-        width: 340px;
+        width: 400px;
         border: solid lightgrey;
         border-width: 4px;
         padding: 8px;
@@ -680,28 +683,20 @@
     }
 
     #lobbyClose{
-        position:absolute;
-        margin-top: 170px;
-        margin-bottom: 100px;
+        width: 100%;
+        position:relative;
         font-family: 'Cabin';
-        left:80px;
-        float:bottom;
+        margin-top: 80%;
+        margin-bottom: 50px;
         color: #fff;
-        width:auto;
-        height: auto;
-        font-size: 32px;
     }
     #lobbyLeave{
-        position:absolute;
-        margin-top: 170px;
-        margin-bottom: 100px;
+        width: 100%;
+        position:relative;
         font-family: 'Cabin';
-        left:80px;
-        float:bottom;
+        margin-top: 80%;
+        margin-bottom: 50px;
         color: #fff;
-        width:auto;
-        height: auto;
-        font-size: 32px;
     }
 
     #leave-club-button:hover{
